# gPhoton2

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  gfcat_new.py  gfcat_new_2.py  leg_workspace.ipynb  optional-requirements.txt  photonpipe_cli.py  pipeline_cli.py  pyproject.toml  requirements.txt  ruff.toml  run_moviemaker.py  run_photometry.py  run_photonpipe.py  run_pipeline.py  setup.py  tutorial.ipynb
.github/workflows/: lint.yml
gPhoton/: CalUtils.py  FileUtils.py  MCUtils.py  PhotonPipe.py  PhotonPipe_2.py  PhotonPipe_3.py  __init__.py  _numbafied_pipe_components.py  _pipe_components.py  _shared_memory_pipe_components.py  aspect.py  background.py  cal_utils.py  calibrate.py  calibrate_photons.py  cals.py  coadd.py  constants.py  dbasetools.py  devtools.py  eclipse.py  galex_io.py  gnomonic.py  gphoton_utils.py  highsearcher.py  mask.py  moviemaker.py  netutils.py  numba_utilz.py  parquet_utils.py  photometry.py  pipeline.py  pipeline_start.py  pipeline_utils.py  pretty.py  reference.py  regtestutils.py  sharing.py  test_for_coverage.py  types.py  (+2 more)
gPhoton/__emoji/: __init__.py
gPhoton/_dev/: __init__.py  profile.py
gPhoton/analysis/: utils.py
gPhoton/aspect/: README.md  __init__.py
gPhoton/cal/: __init__.py
gPhoton/cal_data/: README.md  __init__.py
gPhoton/coords/: gnomonic.py  wcs.py
gPhoton/io/: _scst.py  aspect.py  fetch.py  find.py  fits_utils.py  lc_utils.py  mast.py  netutils.py  query.py  raw6.py  scst.py
gPhoton/io/_query/: mast_query.py
gPhoton/lightcurve/: __init__.py  _plot.py  _steps.py  core.py  photometry_utils.py
gPhoton/moviemaker/: __init__.py  _steps.py  handlers.py
gPhoton/photonpipe/: __init__.py  _numbafied.py  _steps.py  core.py
gPhoton/search/: core.py
gPhoton/tests/: README.md  __init__.py  photometry_regression_stats.csv  test_pipeline_regression.py  test_pipeline_regression_quick.py  test_regression.py
gfcat/: 00 - Example Workflow.ipynb  __init__.py  gfcat.py  gfcat_new.py  gfcat_utils.py  plottest.py
holding/: galextools.py
paper/: paper.bib  paper.md
